--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,15 @@
         "yiisoft/yii2-codeception": "*",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
+        "yiisoft/yii2-faker": "*",
+        "lodin/simple-file": "dev-master"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/Lodin/SimpleFile.git"
+        }
+    ],
     "config": {
         "process-timeout": 1800
     },
